新增：完成多游戏租户隔离改造
